# velofiles

./: .gitignore  LICENSE  PUBLISHING.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: fuzzy.rs  lib.rs  main.rs
src-tauri/src/commands/: drives.rs  fs_ops.rs  listing.rs  mod.rs  preview.rs  rename.rs  search.rs
src/api/: fs.ts
src/components/: BatchRenameDialog.tsx  CommandPalette.tsx  ContextMenu.tsx  Dialogs.tsx  FileList.tsx  GoToDialog.tsx  Inspector.tsx  Pane.tsx  PropertiesDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx  icons.tsx
src/i18n/: index.ts
src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts  tr.ts  zh.ts
src/stores/: settings.ts  tabs.ts
src/utils/: format.ts  fuzzy.ts
