[package]
name = "velofiles"
version = "0.1.0"
description = "VeloFiles — a blazing-fast, open-source, multilingual file explorer for Windows"
authors = ["VeloFiles contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "velofiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
rayon = "1.10"
trash = "5"
open = "5"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
